--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -19,6 +19,8 @@
                 <td>{{ user.name }}</td>
                 <td>{{ user.email }}</td>
                 <td>{{ user.age }}</td>
+                <td>{{ user.account}}</td>
+                <td>{{ user.password}}</td>
             </tr>
             {% endfor %}
         </tbody>
